Thu Jul 28 14:13:50 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: License reverted to LGPL since the code
	is not really "based on" Timidity++.

Wed Jun 22 23:12:00 2005  Tim Janik  <timj@gtk.org>

	* standardguspatchenvelope.cc: wave chunk lookups currently are done
	with a hardcoded velocity of 1.

Wed Jun 15 19:18:46 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: License clarification: as I wrote the
	code by looking at timidity's code, it is GPL (like timidity), not
	LGPL.

Wed Jun 15 19:12:34 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: Improvements in envelope rate handling,
	which make the envelope sound more like timidity.
	If there is no envelope in the GUS patch, then pass sample data
	literally.

Mon Jun  6 17:54:22 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: Fix initialization bugs: added a
	constructor to initialize some members variables, and properly
	initialize others upon reset().
	Added support for the retrigger input signal (though currently this is
	not necessary, as the current midi code will never retrigger a voice
	within a block; only block boundary retrigger in combination with
	reset() is used).

Mon Mar  7 07:55:46 2005  Tim Janik  <timj@gtk.org>

        * removed obsolete .h C++ headers.

        * adapted sources to compile against .hh C++ headers.

Thu Jan 20 01:34:00 2005  Tim Janik  <timj@gtk.org>

	* standardsaturator.idl: move saturator into the distortion submenu.

Thu Jan 20 01:21:24 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* standardguspatchenvelope.cc: Don't assume that in the attack phase,
	the envelope rate is always positive, and in the decay phase always
	negative. Instead, look at the offsets of adjacent envelope points to
	figure out the sign for rate. Fixes: problems with freepats fretless
	bass envelope and probably others.
