@@ -3,7 +3,7 @@
 #
 ## Makefile.am for BSE Plugins
 
-SUBDIRS = icons . freeverb evaluator
+SUBDIRS = icons . freeverb # evaluator
 
 INCLUDES += -I$(top_srcdir) -I. $(BSE_CFLAGS) -DG_LOG_DOMAIN=BSE_PLUGIN_NAME
 INCLUDES += -DBSE_PLUGIN_FALLBACK="\"$(strip $(basename $(<F)))\""
